SERVER-53265 Use "nearest" readPreference in ReshardingOplogFetcher